--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       property="og:image"
-      content="https://share.redd.it/preview/post/sb3of2"
+      content="./level1.jpg"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
