--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Đánh giá mức độ trưởng thành về quản trị trải nghiệm khách hàng"
     />
     <meta
       property="og:image"
-      content="./level1.jpg"
+      content="/level2.jpg"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Test App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
