--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,12 @@
     name="description"
     content="Đánh giá mức độ trưởng thành về quản trị trải nghiệm khách hàng"
   />
+  <meta name="image" content="/level3.jpg">
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <!-- Include React build -->
-  <script src="/static/js/main.js"></script>
-  <!-- Custom script to use 'result.level' and update og:image content -->
+  <!-- <script src="/static/js/main.js"></script>
   <script>
     function updateOGImage(level) {
       console.log("Function updateOGImage is called with level:", level);
@@ -37,13 +36,10 @@
     function receiveLevelFromReact(level) {
       updateOGImage(level);
     }
-  
-    // Example: Call receiveLevelFromReact with a sample level
-    // receiveLevelFromReact(1); // Uncomment and replace with actual level value
   </script>
   
 
-  <title>Test App</title>
+  <title>Test App</title> -->
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
