--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     name="description"
     content="Đánh giá mức độ trưởng thành về quản trị trải nghiệm khách hàng"
   />
-  <meta name="image" content="/level3.jpg">
+  <meta property="og:image" content="/level3.jpg"/>
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
