upadte_share_final

--- a/public/index.html
+++ b/public/index.html
@@ -14,18 +14,18 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <!-- <script src="/static/js/main.js"></script>
+  <script src="/static/js/main.js"></script>
   <script>
     function updateOGImage(level) {
       console.log("Function updateOGImage is called with level:", level);
       var ogImageMeta = document.querySelector('meta[property="og:image"]');
       if (ogImageMeta) {
         if (level === 1) {
-          ogImageMeta.setAttribute('content', '/level2.jpg');
+          ogImageMeta.setAttribute('content', '/level1.jpg');
         } else if (level === 2) {
           ogImageMeta.setAttribute('content', '/level2.jpg');
         } else {
-          ogImageMeta.setAttribute('content', '/level2.jpg');
+          ogImageMeta.setAttribute('content', '/level3.jpg');
         }
         console.log("aaaa");
       } else {
@@ -39,7 +39,7 @@
   </script>
   
 
-  <title>Test App</title> -->
+  <title>Test App</title>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
