--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     name="description"
     content="Đánh giá mức độ trưởng thành về quản trị trải nghiệm khách hàng"
   />
-  <meta property="og:image" content="/level3.jpg"/>
+  <!-- <meta property="og:image" content="/level3.jpg"/>
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -39,7 +39,7 @@
   </script>
   
 
-  <title>Test App</title>
+  <title>Test App</title> -->
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
