--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,10 @@
     name="description"
     content="Đánh giá mức độ trưởng thành về quản trị trải nghiệm khách hàng"
   />
-  <!-- <meta property="og:image" content="/level3.jpg"/>
-
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <script src="/static/js/main.js"></script>
+  <script src="%PUBLIC_URL%/result.js"></script>
   <script>
     function updateOGImage(level) {
       console.log("Function updateOGImage is called with level:", level);
@@ -39,7 +37,7 @@
   </script>
   
 
-  <title>Test App</title> -->
+  <title>Test App</title> 
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
