--- a/public/index.html
+++ b/public/index.html
@@ -1,57 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta
-    name="description"
-    content="Đánh giá mức độ trưởng thành về quản trị trải nghiệm khách hàng"
-  />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Đánh giá mức độ trưởng thành về quản trị trải nghiệm khách hàng"
+    />
+    <meta property="og:image" content="/level3.jpg"/>
 
-  <title>Test App</title> 
-</head>
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root" data-level="3"></div> <!-- Đảm bảo có thuộc tính data-level -->
-  <script src="%PUBLIC_URL%/result.js"></script>
-  <script>
-    document.addEventListener("DOMContentLoaded", function() {
-      const rootDiv = document.getElementById("root");
-      const level = rootDiv.getAttribute("data-level");
-      receiveLevelFromReact(parseInt(level)); // Chuyển đổi thành số nguyên trước khi gọi hàm
-    });
-    
-    function updateOGImage(level) {
-      console.log("Function updateOGImage is called with level:", level);
-      var ogImageMeta = document.querySelector('meta[property="og:image"]');
-      if (ogImageMeta) {
-        switch (level) {
-          case 1:
-            ogImageMeta.setAttribute('content', '/level1.jpg');
-            break;
-          case 2:
-            ogImageMeta.setAttribute('content', '/level2.jpg');
-            break;
-          case 3:
-            ogImageMeta.setAttribute('content', '/level3.jpg');
-            break;
-          default:
-            console.error("Unexpected level value:", level);
-            break;
-        }
-        console.log("aaaa");
-      } else {
-        console.error("Meta tag with property 'og:image' not found.");
-      }
-    }
-  
-    function receiveLevelFromReact(level) {
-      updateOGImage(level);
-    }
-  </script>
-</body>
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>Test App</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+  </body>
 </html>
