--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Đánh giá mức độ trưởng thành về quản trị trải nghiệm khách hàng"
+      content="Đánh giá mức độ trưởng thành về quản trị trải nghiệm khách hàng đối với dự án"
     />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
